added shopping list feature

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="containerTodo">
+        <h2>Your list</h2>
+        <div class="input">
+            <input class="inputBox"></input><button class="listBtn">Submit</button>
+        </div>
+        <div class="list">
+            <ul class="unorderedList">
+                
+            </ul>
+        </div>
+
+    </div>
     
     <div class="container">
         <h1>General Questions!</h1>
@@ -18,5 +30,6 @@
 
 
 <script src="script.js"></script>    
+<script src="script2.js"></script>    
 </body>
 </html>
